--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -42,8 +42,11 @@
         <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="111.4.0" />
         <PackageReference Include="Serilog" Version="4.0.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+        <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.6.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -63,6 +66,7 @@
       <Folder Include="DataAccess\EntityConfigurations\AppLogs\" />
       <Folder Include="DataAccess\EntityConfigurations\Localizations\" />
       <Folder Include="DataAccess\EntityConfigurations\Lookups\" />
+      <Folder Include="Migrations\" />
       <Folder Include="ProxyServices\EmailService\Models\" />
     </ItemGroup>
 
